--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* reset default box styles */
 * {
   margin: 0;
   padding: 0;
@@ -6,11 +7,264 @@
 }
 
 /* Gblobal styles */
-section {
-  padding: 30px 0;
+body {
+  color: #141414;
+}
+
+section,
+footer {
+  padding: 60px 0;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #141414;
+}
+
+.paragraph {
+  padding: 15px 0;
+  line-height: 1.3;
+  max-width: 360px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.secondary-heading {
+  font-weight: 400;
+  padding: 10px 0 5px;
+}
+
+.btn {
+  padding: 10px 20px;
+  border: 1px solid #fff;
+  background: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+}
+
+/* .btn:hover {
+  opacity: 0.5;
+} */
+
+.btn.dark {
+  background: #000;
+  border: 1px solid transparent;
+}
+/* END____Gblobal styles */
+
+header {
+  background-color: rgb(23, 110, 160);
+}
+nav.container {
+  min-height: 10vh;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.nav-links {
+  display: flex;
+  list-style: none;
+}
+
+.nav-links li {
+  padding-left: 10px;
+}
+
+.introduction {
+  background-color: rgb(23, 110, 160);
+  color: #fff;
+}
+
+.introduction__contents {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content h1 {
+  max-width: 300px;
+  font-size: 2.4rem;
+}
+
+.content p {
+  color: #fff;
+}
+
+.offers__contents-grid {
+  display: grid;
+  grid-template-columns: 50px 1fr 1fr 1fr;
+  align-items: center;
+}
+
+.offers__contents-grid img {
+  width: 100%;
+}
+
+.offers__contents {
+  grid-column: 1 / 3;
+}
+
+.arrow {
+  background: #141414;
+  width: 35px;
+  height: 35px;
+  padding: 5px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.gallery__content,
+.get-in-touch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.gallery p {
+  padding-bottom: 60px;
+}
+
+.gallery-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.gallery-grid img {
+  width: 100%;
+}
+
+img.wide-image {
+  grid-column: 1 / 4;
+  height: 500px;
+}
+
+section.get-in-touch {
+  padding-bottom: 120px;
+}
+
+.get-in-touch p {
+  max-width: 600px;
+  font-size: 1.3rem;
+}
+
+.get-in-touch button {
+  width: 50%;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+footer {
+  background: rgb(224, 245, 248);
+}
+
+footer h3 {
+  padding-bottom: 15px;
+}
+
+footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.links li {
+  list-style: none;
+  padding: 10px 0;
+}
+
+.links a {
+  text-decoration: none;
+  color: #141414;
+}
+
+/* desktop viewport */
+@media (max-width: 1200px) {
+  .container {
+    padding: 0 60px;
+  }
+}
+
+/* tablet viewport */
+@media (max-width: 900px) {
+  .container {
+    padding: 0 30px;
+  }
+
+  .offers__contents-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .arrow {
+    order: 4;
+    margin: 15px 0 0 auto;
+    grid-column: 1/3;
+  }
+
+  .gallery__content,
+  .get-in-touch {
+    display: block;
+    text-align: left;
+  }
+
+  .gallery-grid,
+  .offers__contents-grid {
+    gap: 10px;
+  }
+
+  section.get-in-touch {
+    padding-bottom: 60px;
+  }
+
+  .offers__contents {
+    grid-column: 1 / 2;
+  }
+
+  .get-in-touch button {
+    width: auto;
+    font-weight: 400;
+    font-size: inherit;
+  }
+}
+
+/* mobile landscape viewport */
+@media (max-width: 600px) {
+  .container {
+    padding: 0 15px;
+  }
+
+  .offers__contents-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .arrow {
+    grid-column: 1/2;
+  }
+
+  .gallery-grid {
+    grid-template-columns: 1fr;
+  }
+
+  img.wide-image {
+    grid-column: 1 / 2;
+    height: auto;
+  }
+
+  section.get-in-touch {
+    padding-bottom: 30px;
+  }
+
+  .get-in-touch p {
+    max-width: none;
+    font-size: 1rem;
+  }
 }
