--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,10 @@ footer .container {
 
 /* tablet viewport */
 @media (max-width: 900px) {
+  section,
+  footer {
+    padding: 30px 0;
+  }
   .container {
     padding: 0 30px;
   }
@@ -266,5 +270,16 @@ footer .container {
   .get-in-touch p {
     max-width: none;
     font-size: 1rem;
+  }
+
+  footer .container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    /* text-align: center; */
+  }
+
+  footer h3 {
+    padding: 20px 0 5px;
   }
 }
