--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,8 @@ h2 {
 header {
   background: linear-gradient(
     107.43deg,
-    #7087af 11.95%,
+    #6e85ad 11.95%,
+    #99a9c8 99.98%,
     #99a9c8 99.99%,
     rgba(112, 135, 175, 0) 100%
   );
@@ -114,12 +115,28 @@ nav.container {
   align-items: center;
 }
 
-.offers__contents-grid img {
-  width: 100%;
-}
-
 .offers__contents {
   grid-column: 1 / 3;
+}
+
+.gym,
+.fire,
+.internet {
+  background: #f0f3fd;
+}
+
+.icon {
+  padding: 80px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 10px 0 20px rgba(255, 255, 255, 0.8);
+}
+
+.icon img {
+  width: 100%;
 }
 
 .arrow {
