--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,6 @@ h2 {
   padding: 10px 20px;
   border: 1px solid #fff;
   background: none;
-  border-radius: 4px;
   color: #fff;
   cursor: pointer;
 }
@@ -125,6 +124,11 @@ nav.container {
   background: #f0f3fd;
 }
 
+.park,
+.pool {
+  box-shadow: 0 0 10px rgba(141, 141, 141, 0.1);
+}
+
 .icon {
   padding: 80px;
   width: 100%;
@@ -132,7 +136,6 @@ nav.container {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 10px 0 20px rgba(255, 255, 255, 0.8);
 }
 
 .icon img {
@@ -175,6 +178,7 @@ nav.container {
 img.wide-image {
   grid-column: 1 / 4;
   height: 500px;
+  object-fit: cover;
 }
 
 section.get-in-touch {
@@ -270,6 +274,9 @@ footer .container {
 
 /* mobile landscape viewport */
 @media (max-width: 600px) {
+  h2 {
+    max-width: 300px;
+  }
   .container {
     padding: 0 15px;
   }
